Closed
Bug 1410850
Opened 8 years ago
Closed 8 years ago
Port Bug 1410288 - Change nsIPrintProgressParams' attributes from wstring to AString| to mailnews
Categories
(Thunderbird :: General, defect)
Thunderbird
General
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird 58.0
People
(Reporter: jorgk-bmo, Assigned: jorgk-bmo)
Details
Attachments
(1 file)
902 bytes,
patch
|
Details | Diff | Splinter Review |
mailnews/base/src/nsMsgPrintEngine.cpp:382:56: error: no matching function for call to 'nsIPrintProgressParams::SetDocTitle(nsTString<char16_t>::raw_type<char16_t, int>::type)'
Assignee | ||
Comment 1•8 years ago
|
||
Pushed by mozilla@jorgk.com:
https://hg.mozilla.org/comm-central/rev/d09475dacd05
Port bug 1410288 to mailnews: Convert wstring attributes to AString in nsIPrintProgressParams.idl. rs=bustage-fix
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Assignee | ||
Updated•8 years ago
|
Target Milestone: --- → Thunderbird 58.0
Updated•8 years ago
|
Assignee: nobody → jorgk
Updated•3 months ago
|
Summary: Port |Bug 1410288 - Change nsIPrintProgressParams' attributes from wstring to AString| to mailnews → Port Bug 1410288 - Change nsIPrintProgressParams' attributes from wstring to AString| to mailnews
You need to log in
before you can comment on or make changes to this bug.
Description
•