Bug 1410850 - Port bug 1410288 to mailnews: Convert wstring attributes to AString in nsIPrintProgressParams.idl. rs=bustage-fix